--- a/example-1/package.json
+++ b/example-1/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "next": "12.1.6",
+    "random-id": "^1.0.4",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
