forget about to complete

--- a/api/package.json
+++ b/api/package.json
@@ -35,10 +35,12 @@
     "delegates": "^1.0.0",
     "denque": "^2.0.1",
     "detect-libc": "^1.0.3",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.6",
     "emoji-regex": "^8.0.0",
     "escape-string-regexp": "^1.0.5",
     "express": "^4.17.2",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.2",
     "filelist": "^1.0.2",
     "fs-minipass": "^2.1.0",
@@ -69,6 +71,7 @@
     "negotiator": "^0.6.2",
     "node-addon-api": "^3.2.1",
     "node-fetch": "^2.6.7",
+    "nodemailer": "^6.7.5",
     "nopt": "^5.0.0",
     "npmlog": "^5.0.1",
     "object-assign": "^4.1.1",
@@ -102,7 +105,9 @@
     "tar": "^6.1.11",
     "tr46": "^3.0.0",
     "uid-safe": "^2.1.5",
+    "uniqid": "^5.4.0",
     "util-deprecate": "^1.0.2",
+    "uuid": "^8.3.2",
     "webidl-conversions": "^7.0.0",
     "whatwg-url": "^11.0.0",
     "wide-align": "^1.1.5",
