--- a/example-1/package.json
+++ b/example-1/package.json
@@ -16,7 +16,9 @@
     "next": "12.1.6",
     "random-id": "^1.0.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-navigator-geolocation": "^1.0.8",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.17.0",
