--- a/example-1/package.json
+++ b/example-1/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "aos": "^2.3.4",
     "cookies-next": "^2.0.4",
     "firebase": "^9.8.3",
@@ -18,6 +19,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-navigator-geolocation": "^1.0.8",
+    "redux": "^4.2.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
